# linear-agent

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: .env.example  anthropic.rs  config.rs  linear.rs  main.rs  models.rs  ui.rs
