[package]
name = "linear-agent"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool for generating implementation plans from Linear tickets using Claude"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
dialoguer = "0.11"
indicatif = "0.17"
config = "0.13"
dirs = "5.0"
async-trait = "0.1"
